src/tests/snapshots/funky__tests__wasm__incr_counter.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I32,
                    },
                ],
                code: [
                    InstructionWrapper {
                        instruction_id: 11,
                        instruction: OP_I32_CONST(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 12,
                        instruction: OP_LOCAL_SET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 13,
                        instruction: OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 2,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 10,
                                        instruction: OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    InstructionWrapper {
                                                        instruction_id: 1,
                                                        instruction: OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 2,
                                                        instruction: OP_I32_CONST(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 3,
                                                        instruction: OP_I32_ADD,
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 4,
                                                        instruction: OP_LOCAL_SET(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 5,
                                                        instruction: OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 6,
                                                        instruction: OP_I32_CONST(
                                                            3,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 7,
                                                        instruction: OP_I32_EQ,
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 8,
                                                        instruction: OP_BR_IF(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 9,
                                                        instruction: OP_BR(
                                                            0,
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "incr",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        InstructionWrapper {
                            instruction_id: 11,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_LOCAL_SET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 13,
                            instruction: OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 2,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 10,
                                            instruction: OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 1,
                                                            instruction: OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 2,
                                                            instruction: OP_I32_CONST(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 3,
                                                            instruction: OP_I32_ADD,
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 4,
                                                            instruction: OP_LOCAL_SET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 5,
                                                            instruction: OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 6,
                                                            instruction: OP_I32_CONST(
                                                                3,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 7,
                                                            instruction: OP_I32_EQ,
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 8,
                                                            instruction: OP_BR_IF(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 9,
                                                            instruction: OP_BR(
                                                                0,
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
