src/tests/snapshots/funky__tests__wasm__local.tee.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I32,
                    },
                ],
                code: [
                    OP_I32_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    OP_I64_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: F32,
                    },
                ],
                code: [
                    OP_F32_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: F64,
                    },
                ],
                code: [
                    OP_F64_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_I32_CONST(
                        10,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_I64_CONST(
                        11,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_F32_CONST(
                        11.1,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_F64_CONST(
                        12.2,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: F32,
                    },
                    LocalEntry {
                        count: 2,
                        ty: I64,
                    },
                    LocalEntry {
                        count: 1,
                        ty: F64,
                    },
                ],
                code: [
                    OP_I64_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        0,
                    ),
                    OP_I64_EQZ,
                    OP_DROP,
                    OP_F32_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        1,
                    ),
                    OP_F32_NEG,
                    OP_DROP,
                    OP_F64_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        2,
                    ),
                    OP_F64_NEG,
                    OP_DROP,
                    OP_I32_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        3,
                    ),
                    OP_I32_EQZ,
                    OP_DROP,
                    OP_I32_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        4,
                    ),
                    OP_I32_EQZ,
                    OP_DROP,
                    OP_F32_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        5,
                    ),
                    OP_F32_NEG,
                    OP_DROP,
                    OP_I64_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        6,
                    ),
                    OP_I64_EQZ,
                    OP_DROP,
                    OP_I64_CONST(
                        0,
                    ),
                    OP_LOCAL_TEE(
                        7,
                    ),
                    OP_I64_EQZ,
                    OP_DROP,
                    OP_F64_CONST(
                        0.0,
                    ),
                    OP_LOCAL_TEE(
                        8,
                    ),
                    OP_F64_NEG,
                    OP_DROP,
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [],
                return_types: [
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [],
                return_types: [
                    F32,
                ],
            },
            FunctionSignature {
                param_types: [],
                return_types: [
                    F64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                ],
                return_types: [
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [
                    F32,
                ],
                return_types: [
                    F32,
                ],
            },
            FunctionSignature {
                param_types: [
                    F64,
                ],
                return_types: [
                    F64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                    F32,
                    F64,
                    I32,
                    I32,
                ],
                return_types: [],
            },
        ],
        funcaddrs: [
            0,
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "type-local-i32",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "type-local-i64",
                value: Function {
                    ty: 1,
                },
            },
            ExportInstance {
                name: "type-local-f32",
                value: Function {
                    ty: 2,
                },
            },
            ExportInstance {
                name: "type-local-f64",
                value: Function {
                    ty: 3,
                },
            },
            ExportInstance {
                name: "type-param-i32",
                value: Function {
                    ty: 4,
                },
            },
            ExportInstance {
                name: "type-param-i64",
                value: Function {
                    ty: 5,
                },
            },
            ExportInstance {
                name: "type-param-f32",
                value: Function {
                    ty: 6,
                },
            },
            ExportInstance {
                name: "type-param-f64",
                value: Function {
                    ty: 7,
                },
            },
            ExportInstance {
                name: "type-mixed",
                value: Function {
                    ty: 8,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        OP_I32_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        OP_I64_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        F32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: F32,
                        },
                    ],
                    code: [
                        OP_F32_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        F64,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: F64,
                        },
                    ],
                    code: [
                        OP_F64_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_I32_CONST(
                            10,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                    ],
                    return_types: [
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_I64_CONST(
                            11,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        F32,
                    ],
                    return_types: [
                        F32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_F32_CONST(
                            11.1,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        F64,
                    ],
                    return_types: [
                        F64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_F64_CONST(
                            12.2,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                        F32,
                        F64,
                        I32,
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: F32,
                        },
                        LocalEntry {
                            count: 2,
                            ty: I64,
                        },
                        LocalEntry {
                            count: 1,
                            ty: F64,
                        },
                    ],
                    code: [
                        OP_I64_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            0,
                        ),
                        OP_I64_EQZ,
                        OP_DROP,
                        OP_F32_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            1,
                        ),
                        OP_F32_NEG,
                        OP_DROP,
                        OP_F64_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            2,
                        ),
                        OP_F64_NEG,
                        OP_DROP,
                        OP_I32_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            3,
                        ),
                        OP_I32_EQZ,
                        OP_DROP,
                        OP_I32_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            4,
                        ),
                        OP_I32_EQZ,
                        OP_DROP,
                        OP_F32_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            5,
                        ),
                        OP_F32_NEG,
                        OP_DROP,
                        OP_I64_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            6,
                        ),
                        OP_I64_EQZ,
                        OP_DROP,
                        OP_I64_CONST(
                            0,
                        ),
                        OP_LOCAL_TEE(
                            7,
                        ),
                        OP_I64_EQZ,
                        OP_DROP,
                        OP_F64_CONST(
                            0.0,
                        ),
                        OP_LOCAL_TEE(
                            8,
                        ),
                        OP_F64_NEG,
                        OP_DROP,
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
